libs/ratagit-ui/tests/snapshots/snapshots__terminal_snapshot_files_discard_confirm_multiselect_modal.snap
---
source: libs/ratagit-ui/tests/snapshots.rs
expression: "render_terminal_text(&state, TerminalSize { width: 100, height: 30, },)"
---
╭ 1  󰈙 Files ────────────────────╮ 5   Details ───────────────────────────────────────────────────╮
│✓   README.md                  │  ### unstaged                                                   │
│✓   src/                       │  diff --git a/README.md b/README.md                             │
│      lib.rs                   │  @@ -1 +1 @@                                                    │
│      main.rs                  │  -old README.md                                                 │
│                   ╭ ‼ Confirm ───────────────────────────────────────────────╮                   │
│                   │              Discard selected file changes?              │                   │
│                   │               This action cannot be undone.              │                   │
│                   │                                                          │                   │
│                   │                     Targets: 3 files                     │                   │
╰───────────────────│                        - README.md                       │                   │
│ 2   Branches     │                       - src/lib.rs                       │                   │
│ main             │                       - src/main.rs                      │                   │
│  feature/mvp      │                                                          │                   │
│                   │ ──────────────────────────────────────────────────────── │                   │
│                   │ Enter discard  Esc cancel                                │                   │
│                   ╰──────────────────────────────────────────────────────────╯                   │
│                                │                                                                 │
╰────────────────────────────────╯                                                                 │
│ 3   Commits                   │─────────────────────────────────────────────────────────────────╯
│●  abc1234  RT  init project    │ 6  󰌱 Log                                                        │
│●  def5678  RT  wire commands   │  notice=Ready                                                   │
│                                │                                                                 │
│                                │                                                                 │
│                                │                                                                 │
╰────────────────────────────────╯                                                                 │
│ 4   Stash                     │                                                                 │
│ stash@{0} WIP on main: local t│                                                                 │
╰────────────────────────────────╯─────────────────────────────────────────────────────────────────╯
/ loading: details   Enter  confirm   Esc  cancel
