libs/ratagit-ui/tests/snapshots/snapshots__terminal_snapshot_files_reset_hard_confirm_modal.snap
---
source: libs/ratagit-ui/tests/snapshots.rs
expression: "render_terminal_text(&state, TerminalSize { width: 100, height: 30, },)"
---
╭ 1  󰈙 Files ────────────────────╮ 5   Details ───────────────────────────────────────────────────╮
│   ? README.md                  │  ### unstaged                                                   │
│    src/                       │  diff --git a/README.md b/README.md                             │
│     M lib.rs                   │  @@ -1 +1 @@                                                    │
│     M main.rs                  │  -old README.md                                                 │
│                   ╭ ‼ Confirm ───────────────────────────────────────────────╮                   │
│                   │                                                          │                   │
│                   │                                                          │                   │
│                   │             Hard reset working tree to HEAD?             │                   │
│                   │   This can discard uncommitted work that reflog cannot   │                   │
╰───────────────────│                                                          │                   │
│ 2   Branches     │               Runs `git reset --hard HEAD`.              │                   │
│ main             │                                                          │                   │
│  feature/mvp      │                                                          │                   │
│                   │ ──────────────────────────────────────────────────────── │                   │
│                   │ Enter reset hard  Esc cancel                             │                   │
│                   ╰──────────────────────────────────────────────────────────╯                   │
│                                │                                                                 │
╰────────────────────────────────╯                                                                 │
│ 3   Commits                   │─────────────────────────────────────────────────────────────────╯
│●  abc1234  RT  init project    │ 6  󰌱 Log                                                        │
│●  def5678  RT  wire commands   │  notice=Ready                                                   │
│                                │                                                                 │
│                                │                                                                 │
│                                │                                                                 │
╰────────────────────────────────╯                                                                 │
│ 4   Stash                     │                                                                 │
│ stash@{0} WIP on main: local t│                                                                 │
╰────────────────────────────────╯─────────────────────────────────────────────────────────────────╯
 Enter  confirm   Esc  cancel
