libs/ratagit-ui/tests/snapshots/snapshots__terminal_snapshot_files_reset_modal.snap
---
source: libs/ratagit-ui/tests/snapshots.rs
assertion_line: 201
expression: "render_terminal_text(&state, TerminalSize { width: 100, height: 30, },)"
---
┌ [1] 󰈙 Files ───────────────────┐┌ [5]  Details ─────────────────────────────────────────────────┐
│    README.md                  ││  ### unstaged                                                  │
│    src/                       ││  diff --git a/README.md b/README.md                            │
│      lib.rs                   ││  @@ -1 +1 @@                                                   │
│      main.rs                  ││  -old README.md                                                │
│                                ││  +new README.md                                                │
│                                ││                                                                │
│                                ││                                                                │
│             ┌ Reset ───────────────────────────────────────────────────────────────┐             │
│             │ Choose reset scope for the whole repo.                               │             │
└─────────────│ ┌ Mode ────────────────────────────────────────────────────────────┐ │             │
┌ [2]  Branch│ │  mixed                                                           │ │             │
│ main       │ │  soft                                                            │ │             │
│  feature/mvp│ │  hard                                                            │ │             │
│             │ └──────────────────────────────────────────────────────────────────┘ │             │
│             │ Description                                                          │             │
│             │ Mixed: reset index to HEAD; keep working tree changes.               │             │
│             │                                                                      │             │
└─────────────│                                                                      │             │
┌ [3]  Commit│                                                                      │─────────────┘
│ abc1234 ini└──────────────────────────────────────────────────────────────────────┘─────────────┐
│ def5678 wire commands         ││  notice=Ready                                                  │
│  draft=                        ││                                                                │
│                                ││                                                                │
│                                ││                                                                │
└────────────────────────────────┘│                                                                │
┌ [4]  Stash ───────────────────┐│                                                                │
│ stash@{0} WIP on main: local t││                                                                │
└────────────────────────────────┘└────────────────────────────────────────────────────────────────┘
reset: j/k select | Enter confirm | Esc cancel
