libs/ratagit-ui/tests/snapshots/snapshots__terminal_snapshot_files_reset_modal_nuke_description.snap
---
source: libs/ratagit-ui/tests/snapshots.rs
assertion_line: 322
expression: "render_terminal_text(&state, TerminalSize { width: 100, height: 30, },)"
---
┌ [1] 󰈙 Files ───────────────────┐┌ [5]  Details ─────────────────────────────────────────────────┐
│    README.md                  ││  ### unstaged                                                  │
│    src/                       ││  diff --git a/README.md b/README.md                            │
│      lib.rs                   ││  @@ -1 +1 @@                                                   │
│      main.rs                  ││  -old README.md                                                │
│                                ││  +new README.md                                                │
│                                ││                                                                │
│                                ││                                                                │
│             ┌ Reset ───────────────────────────────────────────────────────────────┐             │
│             │ Choose reset scope for the whole repo.                               │             │
└─────────────│ ┌ Mode ────────────────────────────────────────────────────────────┐ │             │
┌ [2]  Branch│ │  soft                                                            │ │             │
│ main       │ │  hard                                                            │ │             │
│  feature/mvp│ │  Nuke                                                            │ │             │
│             │ └──────────────────────────────────────────────────────────────────┘ │             │
│             │ Description                                                          │             │
│             │ Nuke: hard reset, then remove untracked files/directories with `git  │             │
│             │ clean -fd`.                                                          │             │
└─────────────│                                                                      │             │
┌ [3]  Commit│ j/k select  |  Enter confirm  |  Esc cancel                          │─────────────┘
│●  abc1234  R└──────────────────────────────────────────────────────────────────────┘─────────────┐
│●  def5678  RT  wire commands   ││  notice=Ready                                                  │
│                                ││                                                                │
│                                ││                                                                │
│                                ││                                                                │
└────────────────────────────────┘│                                                                │
┌ [4]  Stash ───────────────────┐│                                                                │
│ stash@{0} WIP on main: local t││                                                                │
└────────────────────────────────┘└────────────────────────────────────────────────────────────────┘
reset: j/k select | Enter confirm | Esc cancel
