libs/ratagit-ui/tests/snapshots/snapshots__terminal_snapshot_files_reset_nuke_confirm_modal.snap
---
source: libs/ratagit-ui/tests/snapshots.rs
assertion_line: 693
expression: "render_terminal_text(&state, TerminalSize { width: 100, height: 30, },)"
---
╭ 1  󰈙 Files ────────────────────╮ 5   Details ───────────────────────────────────────────────────╮
│    README.md                  │  ### unstaged                                                   │
│    src/                       │  diff --git a/README.md b/README.md                             │
│      lib.rs                   │  @@ -1 +1 @@                                                    │
│      main.rs                  │  -old README.md                                                 │
│                   ╭ ‼ Confirm ───────────────────────────────────────────────╮                   │
│                   │                                                          │                   │
│                   │                                                          │                   │
│                   │                    Nuke working tree?                    │                   │
│                   │   This can discard uncommitted work that reflog cannot   │                   │
╰───────────────────│                                                          │                   │
│ 2   Branches     │     Runs `git reset --hard HEAD` and `git clean -fd`.    │                   │
│ main             │                                                          │                   │
│  feature/mvp      │                                                          │                   │
│                   │ ──────────────────────────────────────────────────────── │                   │
│                   │ Enter nuke  Esc cancel                                   │                   │
│                   ╰──────────────────────────────────────────────────────────╯                   │
│                                │                                                                 │
╰────────────────────────────────╯                                                                 │
│ 3   Commits                   │─────────────────────────────────────────────────────────────────╯
│●  abc1234  RT  init project    │ 6  󰌱 Log                                                        │
│●  def5678  RT  wire commands   │  notice=Ready                                                   │
│                                │                                                                 │
│                                │                                                                 │
│                                │                                                                 │
╰────────────────────────────────╯                                                                 │
│ 4   Stash                     │                                                                 │
│ stash@{0} WIP on main: local t│                                                                 │
╰────────────────────────────────╯─────────────────────────────────────────────────────────────────╯
 Enter  confirm   Esc  cancel
