libs/ratagit-ui/tests/snapshots/snapshots__terminal_snapshot_files_stash_editor_modal.snap
---
source: libs/ratagit-ui/tests/snapshots.rs
expression: "render_terminal_text(&state, TerminalSize { width: 100, height: 30, },)"
---
╭ 1  󰈙 Files ────────────────────╮ 5   Details ───────────────────────────────────────────────────╮
│✓   README.md                  │  ### unstaged                                                   │
│✓   src/                       │  diff --git a/README.md b/README.md                             │
│      lib.rs                   │  @@ -1 +1 @@                                                    │
│      main.rs                  │  -old README.md                                                 │
│                   ╭ ✎ Stash Message ─────────────────────────────────────────╮                   │
│                   │ Name the stash before saving                             │                   │
│                   │ ╭ Title ───────────────────────────────────────────────╮ │                   │
│                   │ │pick files                                            │ │                   │
│                   │ ╰──────────────────────────────────────────────────────╯ │                   │
╰───────────────────│ Scope: selected files (3)                                │                   │
│ 2   Branches     │                                                          │                   │
│ main             │ ──────────────────────────────────────────────────────── │                   │
│  feature/mvp      │ Left/Right/Home/End cursor                               │                   │
│                   │ Enter confirm  Esc cancel                                │                   │
│                   ╰──────────────────────────────────────────────────────────╯                   │
│                                │                                                                 │
│                                │                                                                 │
╰────────────────────────────────╯                                                                 │
│ 3   Commits                   │─────────────────────────────────────────────────────────────────╯
│●  abc1234  RT  init project    │ 6  󰌱 Log                                                        │
│●  def5678  RT  wire commands   │  notice=Ready                                                   │
│                                │                                                                 │
│                                │                                                                 │
│                                │                                                                 │
╰────────────────────────────────╯                                                                 │
│ 4   Stash                     │                                                                 │
│ stash@{0} WIP on main: local t│                                                                 │
╰────────────────────────────────╯─────────────────────────────────────────────────────────────────╯
 arrows/Home/End  cursor   Enter  confirm   Esc  cancel
