libs/ratagit-ui/tests/snapshots/snapshots__terminal_snapshot_force_push_confirm_modal.snap
---
source: libs/ratagit-ui/tests/snapshots.rs
expression: "render_terminal_text(&state, TerminalSize { width: 100, height: 30, },)"
---
╭ 1  󰈙 Files ────────────────────╮ 5   Details ───────────────────────────────────────────────────╮
│    README.md                  │  ### unstaged                                                   │
│    src/                       │  diff --git a/README.md b/README.md                             │
│      lib.rs                   │  @@ -1 +1 @@                                                    │
│      main.rs                  │  -old README.md                                                 │
│                   ╭ ‼ Confirm ───────────────────────────────────────────────╮                   │
│                   │                                                          │                   │
│                   │                Force push current branch?                │                   │
│                   │            This can overwrite remote commits.            │                   │
│                   │                                                          │                   │
╰───────────────────│                 Git refused normal push:                 │                   │
│ 2   Branches     │          ! [rejected] main -> main (fetch first)         │                   │
│ main             │                                                          │                   │
│  feature/mvp      │                                                          │                   │
│                   │ ──────────────────────────────────────────────────────── │                   │
│                   │ Enter force push  Esc cancel                             │                   │
│                   ╰──────────────────────────────────────────────────────────╯                   │
│                                │                                                                 │
╰────────────────────────────────╯                                                                 │
│ 3   Commits                   │─────────────────────────────────────────────────────────────────╯
│●  abc1234  RT  init project    │ 6  󰌱 Log                                                        │
│●  def5678  RT  wire commands   │  error=Push requires confirmation: ! [rejected] main -> main (fe│
│                                │  notice=Ready                                                   │
│                                │  notice=Push requires confirmation: ! [rejected] main -> main (f│
│                                │                                                                 │
╰────────────────────────────────╯                                                                 │
│ 4   Stash                     │                                                                 │
│ stash@{0} WIP on main: local t│                                                                 │
╰────────────────────────────────╯─────────────────────────────────────────────────────────────────╯
 Enter  force push   Esc  cancel
