libs/ratagit-ui/tests/snapshots/snapshots__terminal_snapshot_huge_repo_metadata_only_status_notice.snap
---
source: libs/ratagit-ui/tests/snapshots.rs
assertion_line: 1309
expression: "render_terminal_text(&state, TerminalSize { width: 100, height: 30, },)"
---
╭ 1  󰈙 Files ────────────────────╮ 5   Details ───────────────────────────────────────────────────╮
│                                │  details(files): no diff for current selection                  │
│                                │                                                                 │
│                                │                                                                 │
│                                │                                                                 │
│                                │                                                                 │
│                                │                                                                 │
│                                │                                                                 │
│                                │                                                                 │
│                                │                                                                 │
╰────────────────────────────────╯                                                                 │
│ 2   Branches                  │                                                                 │
│                                │                                                                 │
│                                │                                                                 │
│                                │                                                                 │
│                                │                                                                 │
│                                │                                                                 │
│                                │                                                                 │
╰────────────────────────────────╯                                                                 │
│ 3   Commits                   │─────────────────────────────────────────────────────────────────╯
│                                │ 6  󰌱 Log                                                        │
│                                │  status=huge repo metadata-only; file scan skipped              │
│                                │  tip=focus Commits/Branches or narrow Git outside ratagit       │
│                                │  notice=Ready                                                   │
│                                │                                                                 │
╰────────────────────────────────╯                                                                 │
│ 4   Stash                     │                                                                 │
│                                │                                                                 │
╰────────────────────────────────╯─────────────────────────────────────────────────────────────────╯
 space  stage/unstage   d  discard   A  amend   c  commit   s  stash   D  reset   enter  expand   ?
