libs/ratagit-ui/tests/snapshots/snapshots__terminal_snapshot_many_files_focus_expands_left_panel.snap
---
source: libs/ratagit-ui/tests/snapshots.rs
assertion_line: 1178
expression: "render_terminal_text(&state, TerminalSize { width: 100, height: 24, },)"
---
╭ 1  󰈙 Files ────────────────────╮ 5   Details ───────────────────────────────────────────────────╮
│   M file-00.txt                │  ### unstaged                                                   │
│   M file-01.txt                │  diff --git a/file-00.txt b/file-00.txt                         │
│   M file-02.txt                │  @@ -1 +1 @@                                                    │
│   M file-03.txt                │  -old file-00.txt                                               │
│   M file-04.txt                │  +new file-00.txt                                               │
│   M file-05.txt                │                                                                 │
│   M file-06.txt                │                                                                 │
│   M file-07.txt                │                                                                 │
│   M file-08.txt                │                                                                 │
│   M file-09.txt                │                                                                 │
│   M file-10.txt                │                                                                 │
│   M file-11.txt                │                                                                 │
╰────────────────────────────────╯                                                                 │
│ 2   Branches                  │                                                                 │
│ main                          │─────────────────────────────────────────────────────────────────╯
╰────────────────────────────────╯ 6  󰌱 Log                                                        │
│ 3   Commits                   │  notice=Ready                                                   │
│●  abc1234  RT  init project    │                                                                 │
╰────────────────────────────────╯                                                                 │
│ 4   Stash                     │                                                                 │
│ stash@{0} WIP on main: local t│                                                                 │
╰────────────────────────────────╯─────────────────────────────────────────────────────────────────╯
 p  pull   P  push   space  stage/unstage   d  discard   A  amend   c  commit   s  stash   D  reset
