libs/ratagit-ui/tests/snapshots/snapshots__terminal_snapshot_refresh_pending_loading.snap
---
source: libs/ratagit-ui/tests/snapshots.rs
expression: "render_terminal_text(&state, TerminalSize { width: 100, height: 30, },)"
---
╭ 1  󰈙 Files ────────────────────╮ 5   Details ───────────────────────────────────────────────────╮
│                                │  details(files): no diff for current selection                  │
│                                │                                                                 │
│                                │                                                                 │
│                                │                                                                 │
│                                │                                                                 │
│                                │                                                                 │
│                                │                                                                 │
│                                │                                                                 │
│                                │                                                                 │
╰────────────────────────────────╯                                                                 │
│ 2   Branches                  │                                                                 │
│                                │                                                                 │
│                                │                                                                 │
│                                │                                                                 │
│                                │                                                                 │
│                                │                                                                 │
│                                │                                                                 │
╰────────────────────────────────╯                                                                 │
│ 3   Commits                   │─────────────────────────────────────────────────────────────────╯
│                                │ 6  󰌱 Log                                                        │
│                                │  work=refreshing repository                                     │
│                                │  notice=Ready                                                   │
│                                │                                                                 │
│                                │                                                                 │
╰────────────────────────────────╯                                                                 │
│ 4   Stash                     │                                                                 │
│                                │                                                                 │
╰────────────────────────────────╯─────────────────────────────────────────────────────────────────╯
/ loading: refresh   space  stage/unstage   d  discard   c  commit   s  stash   D  reset   enter  ex
